<resources>
    <string name="app_name">My BLE Application</string>
    <string name="scan">Scan</string>
    <string name="scanning">Scanning</string>
    <string name="stop_scan">Stopped scanning</string>
    <string name="found">Found</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="reconnecting">Reconnecting</string>
    <string name="device_found">Device found</string>
    <string name="services_discovered">Services discovered</string>
    <string name="gatt_service_connected">GATT Service connected</string>
    <string name="play">Play</string>
    <string name="type_your_message">Type your message</string>
    <string name="send_message">Send</string>
    <string name="temperature">Temperature</string>
    <string name="get_temperature">Read</string>
    <string name="subscribe_temperature">Receive updates</string>

    type_your_message
    <string-array name="songs_array">
        <item>Happy birthday</item>
        <item>Wilhelmus</item>
    </string-array>

</resources>