<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeviceControlActivity">

    <TextView
        android:id="@+id/tvConnectionStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/btPLay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btPLay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/play"
        app:layout_constraintBottom_toBottomOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinner" />

    <EditText
        android:id="@+id/etDisplayMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/type_your_message"
        android:inputType="textPersonName"
        android:maxLength="32"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Button
        android:id="@+id/btSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_message"
        app:layout_constraintBottom_toBottomOf="@+id/etDisplayMessage"
        app:layout_constraintEnd_toEndOf="@+id/btPLay"
        app:layout_constraintTop_toTopOf="@+id/etDisplayMessage" />

    <TextView
        android:id="@+id/tvTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/temperature"
        app:layout_constraintBottom_toBottomOf="@+id/btGetTemperature"
        app:layout_constraintStart_toStartOf="@+id/etDisplayMessage"
        app:layout_constraintTop_toBottomOf="@+id/etDisplayMessage" />

    <Button
        android:id="@+id/btGetTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/get_temperature"
        app:layout_constraintEnd_toStartOf="@+id/btSubsribeTemperature"
        app:layout_constraintTop_toTopOf="@+id/btSubsribeTemperature" />

    <Button
        android:id="@+id/btSubsribeTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="80dp"
        android:text="@string/subscribe_temperature"
        app:layout_constraintEnd_toEndOf="@+id/btSend"
        app:layout_constraintStart_toStartOf="@+id/btSend"
        app:layout_constraintTop_toBottomOf="@+id/btSend" />

</androidx.constraintlayout.widget.ConstraintLayout>